GearsetPOC/force-app/main/default/objects/Ticket_discount_information__c/Ticket_discount_information__c.object-meta.xml
<CustomObject>
    <label>Ticket discount information</label>
    <nameField>
        <displayFormat>TDI-{0000}</displayFormat>
        <label>Ticket discount information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ticket discount information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>