GearsetPOC/force-app/main/default/objects/Ticket_discount_information__c/fields/Maximum_points__c.field-meta.xml
<CustomField>
    <fullName>Maximum_points__c</fullName>
    <label>Maximum points</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>