GearsetPOC/force-app/main/default/objects/Ticket_discount_information__c/fields/Only_multiples__c.field-meta.xml
<CustomField>
    <fullName>Only_multiples__c</fullName>
    <label>Only multiples</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
                <default>true</default>
                <label>Y</label>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>