GearsetPOC/force-app/main/default/objects/Ticket_discount_information__c/fields/Ratio__c.field-meta.xml
<CustomField>
    <fullName>Ratio__c</fullName>
    <label>Ratio</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>