GearsetPOC/force-app/main/default/objects/Ticket_discount_information__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Currency__c</columns>
    <columns>Minimum_points__c</columns>
    <columns>Maximum_points__c</columns>
    <columns>Ratio__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>